unpackaged/objects/BLND_DFTT_Folder__c.object
<CustomObject>
	<fields>
		<fullName>BLND_Access_List__c</fullName>
		<label>Access List</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Extra_Field__c</fullName>
		<label>Extra Field</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Flag1__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag1</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Flag2__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag2</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Flag3__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag3</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Folder_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Folder Link</label>
		<referenceTo>BLND_DFTT_Folder__c</referenceTo>
		<relationshipLabel>TableTop Folders</relationshipLabel>
		<relationshipName>R00N30000002PYiWEAW</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>TableTop Folder</label>
	<nameField>
		<label>Folder Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>TableTop Folders</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>